Fix project creating, get projects by ownerID
