# docs/swagger.yaml
@@ -1,7 +1,9 @@
+basePath: /api/v1
 definitions:
   dto.Kanban:
     properties:
       created_at:
+        description: Убрали CreatedAt и UpdatedAt из запроса на создание
         type: string
       id:
         type: integer
@@ -15,6 +17,7 @@ definitions:
       color:
         type: string
       created_at:
+        description: Убрали CreatedAt и UpdatedAt из запроса на создание
         type: string
       description:
         type: string
@@ -27,6 +30,7 @@ definitions:
       parent_project_id:
         type: integer
       updated_at:
+        description: omitempty, чтобы не возвращать null
         type: string
     type: object
   dto.ProjectUser:
@@ -56,6 +60,7 @@ definitions:
   dto.Task:
     properties:
       created_at:
+        description: Убрали CreatedAt и UpdatedAt из запроса на создание
         type: string
       description:
         type: string
@@ -84,6 +89,21 @@ definitions:
         type: string
       updated_at:
         type: string
+    type: object
+  project_handler.HandleCreateProjectParam:
+    properties:
+      color:
+        type: string
+      description:
+        type: string
+      name:
+        type: string
+      parent_project_id:
+        type: integer
+    required:
+    - color
+    - description
+    - name
     type: object
   response.JSONResponse:
     description: default JSON-response
@@ -123,6 +143,9 @@ definitions:
     type: object
 info:
   contact: {}
+  description: Task manager
+  title: DataTask
+  version: "1.0"
 paths:
   /kanban:
     post:
@@ -294,7 +317,7 @@ paths:
       summary: Get Tasks by Kanban ID
       tags:
       - Task
-  /projects:
+  /project:
     post:
       consumes:
       - application/json
@@ -305,7 +328,7 @@ paths:
         name: request
         required: true
         schema:
-          $ref: '#/definitions/dto.Project'
+          $ref: '#/definitions/project_handler.HandleCreateProjectParam'
       produces:
       - application/json
       responses:
@@ -329,7 +352,7 @@ paths:
       summary: Create Project
       tags:
       - Project
-  /projects/{id}:
+  /project/{id}:
     delete:
       description: Delete a project by its ID
       parameters:
@@ -430,41 +453,7 @@ paths:
       summary: Update Project
       tags:
       - Project
-  /projects/{parent_project_id}/subprojects:
-    get:
-      description: Get all subprojects of a project
-      parameters:
-      - description: Parent Project ID
-        in: path
-        name: parent_project_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.JSONResponse'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/dto.Project'
-                  type: array
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.JSONResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.JSONResponse'
-      summary: Get Subprojects
-      tags:
-      - Project
-  /projects/{project_id}/accept:
+  /project/{project_id}/accept:
     post:
       description: Accept an invitation to join a project
       parameters:
@@ -491,7 +480,7 @@ paths:
       summary: Accept Project Invitation
       tags:
       - Project
-  /projects/{project_id}/invite:
+  /project/{project_id}/invite:
     post:
       consumes:
       - application/json
@@ -526,41 +515,7 @@ paths:
       summary: Invite User to Project
       tags:
       - Project
-  /projects/{project_id}/tasks:
-    get:
-      description: Get all tasks associated with a project
-      parameters:
-      - description: Project ID
-        in: path
-        name: project_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.JSONResponse'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/dto.Task'
-                  type: array
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.JSONResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.JSONResponse'
-      summary: Get Tasks by Project ID
-      tags:
-      - Task
-  /projects/{project_id}/users:
+  /project/{project_id}/users:
     get:
       description: Get all users and their permissions in a project
       parameters:
@@ -594,7 +549,7 @@ paths:
       summary: Get Users in Project
       tags:
       - Project
-  /projects/{project_id}/users/{user_id}/permissions:
+  /project/{project_id}/users/{user_id}/permissions:
     get:
       description: Get the permissions of a user in a project
       parameters:
@@ -635,7 +590,75 @@ paths:
       summary: Get User Permissions for Project
       tags:
       - Project
-  /tasks:
+  /project_subprojects/{parent_project_id}:
+    get:
+      description: Get all subprojects of a project
+      parameters:
+      - description: Parent Project ID
+        in: path
+        name: parent_project_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.JSONResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/dto.Project'
+                  type: array
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.JSONResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.JSONResponse'
+      summary: Get Subprojects
+      tags:
+      - Project
+  /projects/{project_id}/tasks:
+    get:
+      description: Get all tasks associated with a project
+      parameters:
+      - description: Project ID
+        in: path
+        name: project_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.JSONResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/dto.Task'
+                  type: array
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.JSONResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.JSONResponse'
+      summary: Get Tasks by Project ID
+      tags:
+      - Task
+  /task:
     post:
       consumes:
       - application/json
@@ -670,7 +693,7 @@ paths:
       summary: Create Task
       tags:
       - Task
-  /tasks/{id}:
+  /task/{id}:
     delete:
       description: Delete a Task by its ID
       parameters:
@@ -771,7 +794,7 @@ paths:
       summary: Update Task
       tags:
       - Task
-  /tasks/{task_id}/assign:
+  /task/{task_id}/assign:
     post:
       consumes:
       - application/json
@@ -808,8 +831,42 @@ paths:
       summary: Assign User to Task
       tags:
       - Task
-  /user/create:
+  /user/{user_id}/tasks:
     get:
+      description: Get all tasks assigned to a user
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: integer
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            allOf:
+            - $ref: '#/definitions/response.JSONResponse'
+            - properties:
+                data:
+                  items:
+                    $ref: '#/definitions/dto.Task'
+                  type: array
+              type: object
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.JSONResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/response.JSONResponse'
+      summary: Get Tasks by User ID
+      tags:
+      - Task
+  /user/create:
+    post:
       consumes:
       - application/json
       description: create user
@@ -844,7 +901,7 @@ paths:
       tags:
       - User
   /user/delete:
-    get:
+    delete:
       consumes:
       - application/json
       description: delete user
@@ -867,7 +924,7 @@ paths:
       tags:
       - User
   /user/update:
-    get:
+    post:
       consumes:
       - application/json
       description: update user
@@ -901,7 +958,7 @@ paths:
       summary: update user
       tags:
       - User
-  /users/{owner_id}/projects:
+  /user_projects/{owner_id}:
     get:
       description: Get all projects owned by a user
       parameters:
@@ -935,40 +992,6 @@ paths:
       summary: Get Projects by Owner ID
       tags:
       - Project
-  /users/{user_id}/tasks:
-    get:
-      description: Get all tasks assigned to a user
-      parameters:
-      - description: User ID
-        in: path
-        name: user_id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            allOf:
-            - $ref: '#/definitions/response.JSONResponse'
-            - properties:
-                data:
-                  items:
-                    $ref: '#/definitions/dto.Task'
-                  type: array
-              type: object
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.JSONResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/response.JSONResponse'
-      summary: Get Tasks by User ID
-      tags:
-      - Task
   /users/login:
     post:
       consumes:
@@ -991,5 +1014,12 @@ paths:
             $ref: '#/definitions/response.JSONResponse'
       summary: get user
       tags:
-      - users
+      - User
+security:
+- Authorization: []
+securityDefinitions:
+  Authorization:
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
